# wordtomd-converter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
tests/fixtures/: sample.docx  sample.md
wordtomd/: cli.py  converter.py  numbering.py  pdf_converter.py  postprocess.py  relationships.py
wordtomd/renderers/: image.py  inline.py  list_item.py  paragraph.py  table.py
